Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -58,6 +58,7 @@ header.bk-header {
 .companyheader {
   display: block;
   float: left;
+  width: 25%;
 }
 
 /* COMPANY NAME */
@@ -113,10 +114,10 @@ footer.bk-footer .widget.content {
   float: right;
   position: relative;
   background-color: transparent;
+  width: 75%;
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
 }
